# pixelpast-core

./: .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 20260311_0001_initial_foundation.py  20260312_0002_daily_aggregate.py  20260312_0003_vertical_slice_hardening.py  20260313_0004_photo_asset_ingest_v2.py  20260313_0005_import_run_progress_v1.py  20260314_0006_daily_aggregate_schema_v2.py  20260315_0007_job_run_generalization.py  20260315_0008_source_external_identity.py  20260315_0009_daily_view_foundation.py  20260316_0010_daily_aggregate_drop_redundant_identity.py  20260316_0011_daily_view_metadata_normalization.py  20260316_0012_daily_view_score_threshold_metadata.py  20260316_0013_daily_aggregate_color_title_schema.py  20260322_0014_place_and_event_place_foundation.py  20260329_0015_asset_source_identity.py  20260329_0016_reorder_asset_columns.py  20260330_0017_asset_short_id_schema_and_backfill.py  20260401_0018_album_navigation_schema_and_fill_in_foundation.py  20260402_0019_album_aggregate_schema.py  20260404_0020_album_node_asset_counts.py
doc/: ARCHITECTURE.md  CONVENTIONS.md  DOMAIN_MODEL.md  ROADMAP.md  UI_ARCHITECTURE.md  UI_CONCEPT.md  UI_STATES.md  VISION.md
doc/api/: README.md  openapi.yaml
doc/tasks/: R-001-project-foundation.md  R-001-project-skeleton.md  R-002-app-and-persistence-foundation.md  (+145 more)
test/: conftest.py  test_album_aggregate.py  test_album_navigation_api.py  test_album_navigation_foundation.py  test_app_foundation.py  test_asset_thumbnail_cli.py  test_asset_thumbnail_job.py  test_calendar_document_discovery.py  test_calendar_ingestion.py  test_calendar_ingestion_contracts.py  test_cli.py  test_daily_aggregate.py  test_exploration_api_contract_split.py  test_google_maps_timeline_contracts.py  test_google_maps_timeline_discovery.py  test_google_maps_timeline_ingestion.py  test_google_maps_timeline_persistence.py  test_google_places_derive_loading.py  test_google_places_job.py  test_google_places_persistence.py  test_job_run_coordinator_base.py  test_lightroom_catalog_discovery.py  test_lightroom_catalog_ingestion.py  test_lightroom_catalog_ingestion_contracts.py  test_lightroom_catalog_persistence.py  test_lightroom_catalog_transform.py  test_manage_data_api.py  test_manage_data_overlay_foundation.py  test_manage_data_person_groups_catalog_editor.py  test_manage_data_persons_catalog_editor.py  test_media_api.py  test_openapi_route_metadata.py  test_package_structure.py  test_photo_ingestion.py  test_photo_ingestion_contracts.py  test_photo_metadata_fetch.py  test_photo_metadata_transform.py  test_session_bound_persistence_scope_base.py  test_shared_ingestion_persister_helpers.py  test_shared_persistence_outcome_summary.py  (+11 more)
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  (+1 more)
(+232 files in other folders)
