[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelpast"
version = "0.1.0"
description = "Local-first life timeline platform foundation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Philip Daubmeier" },
]
dependencies = [
  "alembic>=1.14",
  "fastapi>=0.115",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "typer>=0.12",
]

[project.scripts]
pixelpast = "pixelpast.cli.main:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
include-package-data = false
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pixelpast*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
